# scanner

./: CMakeLists.txt  main.cpp  slave_controller.thrift
cmake/Modules/: FindThrift.cmake
gen-cpp/: SlaveController.h  slave_controller_types.h
include/: ConsoleMain.h  ConsoleSampleEventListener.h
src/: ConsoleMain.cpp  ConsoleSampleEventListener.cpp  SlaveController.cpp
